namespaces/live.cloud-platform.service.justice.gov.uk/cfe-civil-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cfe-civil-staging
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    cloud-platform.justice.gov.uk/namespace: "cfe-civil-staging"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-eligibility-platform"
    cloud-platform.justice.gov.uk/application: "CFE Civil"
    cloud-platform.justice.gov.uk/owner: "Estimate Eligibility: eligibility@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cfe-civil"
    cloud-platform.justice.gov.uk/team-name: "laa-estimate-eligibility"
    cloud-platform.justice.gov.uk/review-after: ""
