namespaces/live.cloud-platform.service.justice.gov.uk/cfe-civil-staging/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: cfe-civil-staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: cfe-civil-staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: ingress-controllers
    - namespaceSelector:
        matchLabels:
          component: monitoring
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-source-namespace
  namespace: cfe-civil-staging
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              cloud-platform.justice.gov.uk/namespace: laa-apply-for-legalaid-staging
        - namespaceSelector:
            matchLabels:
              cloud-platform.justice.gov.uk/namespace: laa-check-client-qualifies-staging
        - namespaceSelector:
            matchLabels:
              cloud-platform.justice.gov.uk/namespace: laa-cla-backend-uat
        - namespaceSelector:
            matchLabels:
              cloud-platform.justice.gov.uk/namespace: laa-access-civil-legal-aid-staging
        - namespaceSelector:
            matchLabels:
              cloud-platform.justice.gov.uk/namespace: laa-record-controlled-work-staging
